tests/ui/borrowck/borrowck-uninit-after-item.stderr
error[E0381]: used binding `bar` isn't initialized
  --> $DIR/borrowck-uninit-after-item.rs:4:9
   |
LL |     let bar;
   |         --- binding declared here but left uninitialized
LL |     fn baz(_x: isize) { }
LL |     baz(bar);
   |         ^^^ `bar` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let bar = 42;
   |             ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
